--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ html, body {
     background-color: var(--color-cyan);
     font-size: 18px;
     text-align: center;
+    max-width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,13 +45,21 @@ html, body {
 .profile-card {
    display: flex;
    flex-direction: column;
-   max-width: 350px;
+   max-width: 300px;
+   width: 300px;
    height: 60vh;
    background: url("../images/bg-pattern-card.svg"), var(--color-white);
    background-repeat: no-repeat;
    border-radius: 20px;  
    box-shadow: 0 0 25px var(--color-gray);
    position: relative;
+}
+
+hr {
+    position: relative;
+    top: 28%;
+    width: 100%;
+    opacity: 0.5;
 }
 
 .card-text, span {
