--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ html, body {
     font-size: 18px;
     text-align: center;
     max-width: 100%;
+    max-height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,7 +48,7 @@ html, body {
    flex-direction: column;
    max-width: 300px;
    width: 300px;
-   height: 60vh;
+   height: 350px;
    background: url("../images/bg-pattern-card.svg"), var(--color-white);
    background-repeat: no-repeat;
    border-radius: 20px;  
