--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
 * {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;    
     font-family: 'Kumbh Sans', sans-serif;
 }
@@ -11,30 +13,23 @@
     --color-white: hsl(0, 0%, 100%);
 } 
 
-html, body {
+body, main {
     background-color: var(--color-cyan);
-    font-size: 18px;
+    font-size: 18px; 
     text-align: center;
-    max-width: 100%;
-    max-height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
 }
 
 .background-top, .background-bottom {
     position: absolute;
-    background-repeat: no-repeat;
     width: 100%;
     height: 100%;
-}
-
-.background-top {
-    background: url("../images/bg-pattern-top.svg") no-repeat;
-    background-size: cover;
-    background-position: calc(100% - 170px) calc(100% - 250px);
+    z-index: -1;
 }
 
 .background-bottom {
@@ -43,63 +38,55 @@ html, body {
     background-position: calc(100% - -350px) calc(100% - -350px);
 }
 
-.profile-card {
-   display: flex;
-   flex-direction: column;
-   max-width: 300px;
-   width: 300px;
-   height: 350px;
-   background: url("../images/bg-pattern-card.svg"), var(--color-white);
-   background-repeat: no-repeat;
-   border-radius: 20px;  
-   box-shadow: 0 0 25px var(--color-gray);
-   position: relative;
+.background-top {
+    background: url("../images/bg-pattern-top.svg") no-repeat;
+    background-size: cover;
+    background-position: calc(100% - 170px) calc(100% - 250px);
 }
 
-hr {
-    position: relative;
-    top: 28%;
+.profile-card {    
+    max-width: 350px;
     width: 100%;
-    opacity: 0.5;
+    min-height: 350px;
+    background: url("../images/bg-pattern-card.svg"), var(--color-white);
+    background-repeat: no-repeat;
+    border-radius: 20px;
+    margin: 10% auto 0 auto;
+    box-shadow: 0 0 25px var(--color-gray);
+    color: var(--color-blue);
 }
 
-.card-text, span {
-    color: var(--color-blue); 
-    font-weight: 700; 
-}
-
-.card-top {
-    position: relative;
-    top: 25%;
+.card--text {
+    font-weight: 700;
 }
 
 .card-top img {
-    border-radius: 360%;
+    margin-top: 25%;
     border: 5px solid var(--color-white);
+    border-radius: 360%;
 }
 
-.card-top > span {
-    display: block;
+.card--detail {
+    opacity: 0.5;
+    line-height: 1;
+    margin-bottom: 10%;
 }
 
 .card-bottom {
-    display: flex;
-    position: relative;
-    top: 30%;
-    padding: 2% 10%;
+    display: inline-flex;
+    padding: 5% 10%;
 }
 
-.card-content {
+.card__content {
     opacity: 0.5;
-    line-height: 2;
-    color: var(--color-grayish-blue);
-    font-size: 13px;
-    font-weight: 400;
+    line-height: 1.5;
+    font-weight: 400;  
 }
+
 
 .attribution { 
     font-size: 11px; 
-    margin-top: 20%;
+    margin: 2%;
 }
 
 .attribution a { 
@@ -115,4 +102,5 @@ hr {
         background-position: calc(100% - -580px) calc(100% - -1000px);
     }
     
-}
+} 
+
