--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ body, main {
     background: url("../images/bg-pattern-card.svg"), var(--color-white);
     background-repeat: no-repeat;
     border-radius: 20px;
-    margin: 10% auto 0 auto;
+    margin: 30% auto 10% auto;
     box-shadow: 0 0 25px var(--color-gray);
     color: var(--color-blue);
 }
@@ -101,6 +101,10 @@ body, main {
     .background-bottom {
         background-position: calc(100% - -580px) calc(100% - -1000px);
     }
+    
+    .profile-card {
+         margin: 10% auto 0 auto;    
+    }      
     
 } 
 
